Fix crash on icon long click